Fix scaling on iOS.

--- a/src/style.css
+++ b/src/style.css
@@ -64,6 +64,7 @@ button {
   box-sizing: border-box;
   margin: 5px;
   user-select: none;
+  -webkit-user-select: none;
 }
 
 button.can-hold {
